[gd_scene load_steps=2 format=3 uid="uid://7o1c216d5kt2"]

[ext_resource type="Script" uid="uid://c2u4vkc4s583" path="res://scripts/PlaceItem.gd" id="1_1spbn"]

[node name="PlaceItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1spbn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlaceName" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Notes" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Tags" type="FlowContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Hours" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="EditButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"
